# image-compress

./: CMakeLists.txt  ImageCompress.bat  README.md
image-compress/src/: main.cpp
soft/: readme.txt
soft/CxImageCompress/: compress.bat  readme.txt
soft/cximage/: compress.bat  readme.txt
soft/guetzli/: README.txt  compress.bat
test/: rectification.cpp  test.cpp
test/include/opencv2/: cvconfig.h  opencv_modules.hpp
